fix dashtable left overflow

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -30,3 +30,7 @@
   font-weight: bold;
   color: grey;
 }
+
+.row .row-1 {
+  margin-left: 0px;
+}
